--- a/_notebooks/Homework/2025-04-10-calcenac.ipynb
+++ b/_notebooks/Homework/2025-04-10-calcenac.ipynb
@@ -27,12 +27,12 @@
     "- Create a method for both programs to display all operations before processing them, and track the result after each operation.\n",
     "- Advanced Task: Implement a calculator that supports parentheses using a stack to ensure proper operation precedence.\n",
     "\n",
-    "**For tasks 3 & 4, I used an abstract class**"
+    "**For tasks 3 & 4, I used an abstract class. I did not do the advanced task.**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "97e0d14f",
    "metadata": {
     "vscode": {
@@ -45,17 +45,9 @@
     "import java.util.ArrayList;\n",
     "import java.util.List;\n",
     "\n",
-    "/**\n",
-    " * Abstract class for calculator operations that can be implemented\n",
-    " * with different data structures like Stack or Queue.\n",
-    " */\n",
     "public abstract class AbstractCalculator {\n",
-    "    // List to store operation results for tracking\n",
     "    protected List<String> resultHistory;\n",
     "    \n",
-    "    /**\n",
-    "     * Constructor initializes the result history list\n",
-    "     */\n",
     "    public AbstractCalculator() {\n",
     "        resultHistory = new ArrayList<>();\n",
     "    }\n",
@@ -66,14 +58,8 @@
     "     */\n",
     "    public abstract void addOperation(String operation);\n",
     "    \n",
-    "    /**\n",
-    "     * Process all operations according to the specific data structure's order\n",
-    "     */\n",
     "    public abstract void processAllOperations();\n",
-    "    \n",
-    "    /**\n",
-    "     * Display all operations before processing\n",
-    "     */\n",
+    "\n",
     "    public abstract void displayOperations();\n",
     "    \n",
     "    /**\n",
@@ -83,7 +69,6 @@
     "     */\n",
     "    protected double calculate(String operation) {\n",
     "        try {\n",
-    "            // Split the operation string into components\n",
     "            String[] parts = operation.split(\" \");\n",
     "            if (parts.length != 3) {\n",
     "                throw new IllegalArgumentException(\"Invalid operation format. Expected: operand operator operand\");\n",
@@ -93,7 +78,6 @@
     "            String operator = parts[1];\n",
     "            double operand2 = Double.parseDouble(parts[2]);\n",
     "            \n",
-    "            // Perform the calculation based on the operator\n",
     "            switch (operator) {\n",
     "                case \"+\":\n",
     "                    return operand1 + operand2;\n",
@@ -137,9 +121,6 @@
     "        System.out.println(\"Result: \" + result);\n",
     "    }\n",
     "    \n",
-    "    /**\n",
-    "     * Display all operation results history\n",
-    "     */\n",
     "    public void displayResultHistory() {\n",
     "        System.out.println(\"\\n===== Result History =====\");\n",
     "        for (String entry : resultHistory) {\n",
@@ -152,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "2589e09a",
    "metadata": {
     "vscode": {
@@ -213,15 +194,9 @@
     "import java.util.LinkedList;\n",
     "import java.util.Queue;\n",
     "\n",
-    "/**\n",
-    " * Queue-based calculator implementation (FIFO - First In, First Out)\n",
-    " */\n",
     "public class CalculatorQueue extends AbstractCalculator {\n",
     "    private Queue<String> operations;\n",
-    "    \n",
-    "    /**\n",
-    "     * Constructor initializes the operations queue\n",
-    "     */\n",
+    "\n",
     "    public CalculatorQueue() {\n",
     "        super();\n",
     "        operations = new LinkedList<>();\n",
@@ -243,9 +218,6 @@
     "        }\n",
     "    }\n",
     "    \n",
-    "    /**\n",
-    "     * Process all operations in queue order (FIFO)\n",
-    "     */\n",
     "    @Override\n",
     "    public void processAllOperations() {\n",
     "        System.out.println(\"\\nProcessing operations in FIFO order:\");\n",
@@ -259,13 +231,10 @@
     "            } catch (Exception e) {\n",
     "                handleInvalidOperation(operation, e.getMessage());\n",
     "            }\n",
-    "            System.out.println(); // Add a blank line for readability\n",
+    "            System.out.println();\n",
     "        }\n",
     "    }\n",
     "    \n",
-    "    /**\n",
-    "     * Display all operations in the queue before processing\n",
-    "     */\n",
     "    @Override\n",
     "    public void displayOperations() {\n",
     "        System.out.println(\"\\n===== Operations in Queue =====\");\n",
@@ -300,27 +269,20 @@
     "        }\n",
     "    }\n",
     "    \n",
-    "    /**\n",
-    "     * Main method to run the CalculatorQueue independently\n",
-    "     */\n",
     "    public static void main(String[] args) { \n",
     "        CalculatorQueue calculator = new CalculatorQueue();\n",
     "        \n",
-    "        // Add operations\n",
     "        calculator.addOperation(\"3 + 5\");\n",
     "        calculator.addOperation(\"10 - 4\");\n",
     "        calculator.addOperation(\"6 * 2\");\n",
     "        calculator.addOperation(\"8 / 2\");\n",
-    "        calculator.addOperation(\"9 / 0\");  // Invalid operation (division by zero)\n",
-    "        calculator.addOperation(\"3 $ 4\");  // Invalid operation (unsupported operator)\n",
+    "        calculator.addOperation(\"9 / 0\");\n",
+    "        calculator.addOperation(\"3 $ 4\");\n",
     "        \n",
-    "        // Display operations before processing\n",
     "        calculator.displayOperations();\n",
-    "        \n",
-    "        // Process all operations\n",
+    "    \n",
     "        calculator.processAllOperations();\n",
     "        \n",
-    "        // Display result history\n",
     "        calculator.displayResultHistory();\n",
     "    }\n",
     "}\n",
@@ -329,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "fe28ac9c",
    "metadata": {
     "vscode": {
@@ -391,15 +353,9 @@
     "// Stack Task\n",
     "import java.util.Stack;\n",
     "\n",
-    "/**\n",
-    " * Stack-based calculator implementation (LIFO - Last In, First Out)\n",
-    " */\n",
     "public class CalculatorStack extends AbstractCalculator {\n",
     "    private Stack<String> operations;\n",
     "    \n",
-    "    /**\n",
-    "     * Constructor initializes the operations stack\n",
-    "     */\n",
     "    public CalculatorStack() {\n",
     "        super();\n",
     "        operations = new Stack<>();\n",
@@ -412,12 +368,10 @@
     "    @Override\n",
     "    public void addOperation(String operation) {\n",
     "        try {\n",
-    "            // Validate the operation before adding\n",
     "            validate(operation);\n",
     "            \n",
     "            String[] parts = operation.split(\" \");\n",
     "            if (parts[1].equals(\"+\")) {\n",
-    "                // Reverse order for addition (e.g., \"3 + 5\" becomes \"5 + 3\")\n",
     "                operation = parts[2] + \" + \" + parts[0];\n",
     "                System.out.println(\"Addition reversed: \" + operation);\n",
     "            }\n",
@@ -429,9 +383,6 @@
     "        }\n",
     "    }\n",
     "    \n",
-    "    /**\n",
-    "     * Process all operations in stack order (LIFO)\n",
-    "     */\n",
     "    @Override\n",
     "    public void processAllOperations() {\n",
     "        System.out.println(\"\\nProcessing operations in LIFO order:\");\n",
@@ -445,17 +396,13 @@
     "            } catch (Exception e) {\n",
     "                handleInvalidOperation(operation, e.getMessage());\n",
     "            }\n",
-    "            System.out.println(); // Add a blank line for readability\n",
+    "            System.out.println();\n",
     "        }\n",
     "    }\n",
     "    \n",
-    "    /**\n",
-    "     * Display all operations in the stack before processing\n",
-    "     */\n",
     "    @Override\n",
     "    public void displayOperations() {\n",
     "        System.out.println(\"\\n===== Operations in Stack =====\");\n",
-    "        // Create a temporary stack to display operations in the order they were added\n",
     "        Stack<String> tempStack = new Stack<>();\n",
     "        tempStack.addAll(operations);\n",
     "        \n",
@@ -494,28 +441,21 @@
     "            throw new IllegalArgumentException(\"Unsupported operator: \" + operator);\n",
     "        }\n",
     "    }\n",
-    "    \n",
-    "    /**\n",
-    "     * Main method to run the CalculatorStack independently\n",
-    "     */\n",
+    "\n",
     "    public static void main(String[] args) {  \n",
     "        CalculatorStack calculator = new CalculatorStack();\n",
     "        \n",
-    "        // Add operations\n",
-    "        calculator.addOperation(\"3 + 5\");  // Will be reversed to \"5 + 3\"\n",
+    "        calculator.addOperation(\"3 + 5\");\n",
     "        calculator.addOperation(\"10 - 4\");\n",
     "        calculator.addOperation(\"6 * 2\");\n",
     "        calculator.addOperation(\"8 / 2\");\n",
-    "        calculator.addOperation(\"9 / 0\");  // Invalid operation (division by zero)\n",
-    "        calculator.addOperation(\"3 @ 4\");  // Invalid operation (unsupported operator)\n",
+    "        calculator.addOperation(\"9 / 0\");\n",
+    "        calculator.addOperation(\"3 @ 4\");\n",
     "        \n",
-    "        // Display operations before processing\n",
     "        calculator.displayOperations();\n",
     "        \n",
-    "        // Process all operations\n",
     "        calculator.processAllOperations();\n",
     "        \n",
-    "        // Display result history\n",
     "        calculator.displayResultHistory();\n",
     "    }\n",
     "}\n",
