--- a/_notebooks/Homework/2025-04-10-cyberceo_event.ipynb
+++ b/_notebooks/Homework/2025-04-10-cyberceo_event.ipynb
@@ -32,8 +32,9 @@
     "\n",
     "\n",
     "My main motivation for choosing to come was to learn more about the growing field of cybersecurity. My parents tell me all the time about how important cybersecurity will be in the future, so I thought it would be useful to get a surface level understanding and see if I have any interest in the field.\n",
+    "Click [here](https://github.com/user-attachments/assets/cb3a48db-2343-417f-8020-9021840a0918) if the image is not working\n",
     "\n",
-    "<img src=\"../../images/cyberceo.jpg\" alt=\"CyberCEO Image\">"
+    "![Image](../../images/cyberceo.jpg)"
    ]
   },
   {
@@ -135,6 +136,20 @@
     "The panel made me realize how important cybersecurity is for a variety of fields, but also that soft skills are necessary for me wherever I go--even if I'm not pursuing something like software engineering specifically.\n",
     "\n",
     "My ultimate dream is to do work with nuclear fusion reactors, and when I did research cybersecurity is actually important. Cybersecurity is crucial for protecting intellectual property (data or designs) and making sure control systems stay safe. The intersection between the two fields is definitely something I'll be looking into!!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e1e6fd22",
+   "metadata": {},
+   "source": [
+    "<script src=\"https://utteranc.es/client.js\"\n",
+    "        repo=\"[trevorhuang1/csa_blog]\"\n",
+    "        issue-term=\"pathname\"\n",
+    "        theme=\"github-light\"\n",
+    "        crossorigin=\"anonymous\"\n",
+    "        async>\n",
+    "</script>"
    ]
   }
  ],
