--- a/_notebooks/Homework/2025-04-10-cyberceo_event.ipynb
+++ b/_notebooks/Homework/2025-04-10-cyberceo_event.ipynb
@@ -135,7 +135,9 @@
     "### Summary\n",
     "The panel made me realize how important cybersecurity is for a variety of fields, but also that soft skills are necessary for me wherever I go--even if I'm not pursuing something like software engineering specifically.\n",
     "\n",
-    "My ultimate dream is to do work with nuclear fusion reactors, and when I did research cybersecurity is actually important. Cybersecurity is crucial for protecting intellectual property (data or designs) and making sure control systems stay safe. The intersection between the two fields is definitely something I'll be looking into!!"
+    "My ultimate dream is to do work with nuclear fusion reactors, and when I did research cybersecurity is actually important. Cybersecurity is crucial for protecting intellectual property (data or designs) and making sure control systems stay safe. The intersection between the two fields is definitely something I'll be looking into!!\n",
+    "\n",
+    "> My utterances are currently broken, so please leave a comment [here](https://github.com/trevorhuang1/csa_blog/issues/27)"
    ]
   },
   {
