--- a/_notebooks/Foundation/_tangibles/2025-03-04-mcq_frq_writeup.ipynb
+++ b/_notebooks/Foundation/_tangibles/2025-03-04-mcq_frq_writeup.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "toc: False\n",
+    "toc: True\n",
     "comments: True\n",
     "layout: post\n",
     "title: MCQ and FRQ Corrections\n",
