--- a/_notebooks/Homework/2025-04-10-cyberceo_event.ipynb
+++ b/_notebooks/Homework/2025-04-10-cyberceo_event.ipynb
@@ -8,6 +8,7 @@
     "---\n",
     "toc: false \n",
     "layout: post\n",
+    "comments: True\n",
     "title: CyberCEO Panelist Event\n",
     "description: Summary of my notes for the CyberCEO event. I added takeaways and next steps for myself here as a reminder.\n",
     "courses: { csa: {week: 26} }\n",
