--- a/_notebooks/Foundation/_tangibles/2024-11-18-2014_mcq_corrections.ipynb
+++ b/_notebooks/Foundation/_tangibles/2024-11-18-2014_mcq_corrections.ipynb
@@ -15,6 +15,7 @@
     "title: 2014 College Board MCQ Corrections\n",
     "description: These will be my corrections for \n",
     "courses: { csa: {week: 13} }\n",
+    "permalink: /corrections\n",
     "---"
    ]
   },
@@ -23,7 +24,7 @@
    "metadata": {},
    "source": [
     "## My score and the future:\n",
-    "> I scored a **29/40** on the CSA practice MCQ, which is only around the range of a 4 on the AP exam.\n",
+    "> I scored a **32/40** on the CSA practice MCQ, which is only around the range of a 4 on the AP exam.\n",
     "\n",
     "The score was super disappointing at first, but after reviewing my mistakes, I'm positive that I just need to understand the tricks that College Board pulls and I will be fine. My conceptual knowledge was there for most, if not all problems, but the amount of boneheaded or sloppy mistakes that I made was just ridiculous. In the future, I need to take practice more serious and think more critically when analyzing questions."
    ]
