--- a/_notebooks/Homework/2025-04-23-frq-work.ipynb
+++ b/_notebooks/Homework/2025-04-23-frq-work.ipynb
@@ -116,6 +116,86 @@
     "  }\n",
     "  "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c83fe58f",
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "// FRQ #3\n",
+    "public void cleanData(double lower, double upper) {\n",
+    "    for (int i = temperatures.size() - 1; i >= 0; i--) {\n",
+    "        double temp = temperatures.get(i);\n",
+    "        if (temp < lower || temp > upper) {\n",
+    "            temperatures.remove(i);\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public int longestHeatWave(double threshold) {\n",
+    "    int waveLength = 0;\n",
+    "    int maxWavelength = 0;\n",
+    "\n",
+    "    for (double temp : temperatures) {\n",
+    "        if (temp > threshold) {\n",
+    "            waveLength++;\n",
+    "            if (waveLength > maxWavelength) {\n",
+    "                maxWavelength = waveLength;\n",
+    "            }\n",
+    "        } else {\n",
+    "            waveLength = 0;\n",
+    "        }\n",
+    "    }\n",
+    "    return maxWavelength;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d303de3c",
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "// FRQ #4\n",
+    "public boolean moveCandyToFirstRow(int col) {\n",
+    "    if (box[0][col] != null) {\n",
+    "        return true;\n",
+    "    }\n",
+    "    for (int row = 1; row < box.length; row++) {\n",
+    "        if (box[row][col] != null) {\n",
+    "            box[0][col] = box[row][col];\n",
+    "            box[row][col] = null;\n",
+    "            return true;\n",
+    "        }\n",
+    "    }\n",
+    "    return false;\n",
+    "}\n",
+    "\n",
+    "public Candy removeNextByFlavor(String flavor) {\n",
+    "    for (int row = box.length - 1; row >= 0; row--) {\n",
+    "        for (int col = 0; col < box[0].length; col++) {\n",
+    "            if (box[row][col] != null && \n",
+    "                box[row][col].getFlavor().equals(flavor)) {\n",
+    "                Candy taken = box[row][col];\n",
+    "                box[row][col] = null;\n",
+    "                return taken;\n",
+    "            }\n",
+    "        }\n",
+    "    }\n",
+    "    return null;\n",
+    "}"
+   ]
   }
  ],
  "metadata": {
